@@ -1,3 +1,6 @@
+Changes since revision 297:
+*Documents in Mozilla Gecko now handle bullets and numbering of list items better. Previously a bullet would force a list item to sometimes be over two lines.
+
 Changes since revision 293:
 *Graphics in Mozilla Gecko virtualBuffers are now ignored if they do not have a title / alt attribute.
 *Page up and page down in rich edit documents now speak the line that they move to.
